Bug 1588966 - Fix block-end border and padding for the column containers in paginated context.

If the column containers (ColumnSetWrapper) is in a paginated context, we
incorrect subtract its block-end border and padding from the available
remaining block-size to its every fragments even if it doesn't have
"box-decoration-break: clone".

We already have multicol-breaking-004 covering
"box-decoration-break:clone" for a column container in a paginated
context.

Note: This bug also happens with column-span disabled because
nsColumnSetFrame::GetAvailableContentBSize() always ignores the
block-end skip side, and subtracts block-end border and padding from the
available-size.

Differential Revision: https://phabricator.services.mozilla.com/D49523